--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*"
+        "jaeger/querylist": "^4.2",
+        "laravel/lumen-framework": "5.8.*",
+        "lumen58/php-phantomjs": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
@@ -16,7 +18,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "libraries"
         ],
         "psr-4": {
             "App\\": "app/"
