--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "jaeger/querylist": "^4.2",
-        "laravel/lumen-framework": "5.8.*",
-        "lumen58/php-phantomjs": "^1.2"
+        "laravel/lumen-framework": "5.8.*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
@@ -18,8 +16,7 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories",
-            "libraries"
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
