--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "libraries"
         ],
         "psr-4": {
             "App\\": "app/"
